Teste de correção resposividade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <button id="menu-toggle">☰</button>
+    <nav id="menu" class="hidden">
     <div class="menu-vertical">
         <div id="backToHomeBtn" class="logo">
             <img src="./img/spotify_logo.png">
@@ -53,6 +55,7 @@
         <p class="line"></p>
         <p>Radio</p>
     </div>
+    </nav>
     <div class="menu-bar">
         <div class="nav-buttons">
             <button id="backToHomeBtn" class="back-left" aria-label="Voltar">
@@ -66,7 +69,6 @@
                 </svg>
             </button>
         </div>
-
         <nav class="menu-links">
             <a href="#">Playlist</a>
             <a href="#">Podcast</a>
@@ -126,4 +128,3 @@
 </body>
 
 </html>
-
