--- a/index.html
+++ b/index.html
@@ -9,52 +9,53 @@
 </head>
 
 <body>
+    <meta name="viewport">
     <button id="menu-toggle">☰</button>
     <nav id="menu" class="hidden">
-    <div class="menu-vertical">
-        <div id="backToHomeBtn" class="logo">
-            <img src="./img/spotify_logo.png">
-            <p>Spotify</p>
+        <div class="menu-vertical">
+            <div id="backToHomeBtn" class="logo">
+                <img src="./img/spotify_logo.png">
+                <p>Spotify</p>
+            </div>
+            <a href="index.html">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
+                    <path
+                        d="M 12 2 A 1 1 0 0 0 11.289062 2.296875 L 1.203125 11.097656 A 0.5 0.5 0 0 0 1 11.5 A 0.5 0.5 0 0 0 1.5 12 L 4 12 L 4 20 C 4 20.552 4.448 21 5 21 L 9 21 C 9.552 21 10 20.552 10 20 L 10 14 L 14 14 L 14 20 C 14 20.552 14.448 21 15 21 L 19 21 C 19.552 21 20 20.552 20 20 L 20 12 L 22.5 12 A 0.5 0.5 0 0 0 23 11.5 A 0.5 0.5 0 0 0 22.796875 11.097656 L 12.716797 2.3027344 A 1 1 0 0 0 12.710938 2.296875 A 1 1 0 0 0 12 2 z">
+                    </path>
+                </svg>
+                <span>Inicial</span>
+            </a>
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
+                    <path d="M22 20L20 22 14 16 14 14 16 14z"></path>
+                    <path
+                        d="M9,16c-3.9,0-7-3.1-7-7c0-3.9,3.1-7,7-7c3.9,0,7,3.1,7,7C16,12.9,12.9,16,9,16z M9,4C6.2,4,4,6.2,4,9c0,2.8,2.2,5,5,5 c2.8,0,5-2.2,5-5C14,6.2,11.8,4,9,4z">
+                    </path>
+                    <path d="M13.7 12.5H14.7V16H13.7z" transform="rotate(-44.992 14.25 14.25)"></path>
+                </svg>
+                <span>Pesquisa</span>
+            </a>
+            <a href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
+                    <path d="M2 11H22V13H2zM2 5H22V7H2zM2 17H22V19H2z">
+                    </path>
+                </svg>
+                <span>Biblioteca</span>
+            </a>
+
+            <br />
+            <a href="#" class="logo-menuvertical">
+                <img src="./img/create_a_new.png" />
+                <span>Nova Playlist</span>
+            </a>
+            <a href="#" class="logo-menuvertical">
+                <img src="./img/liked_songs.jpg" />
+                <span>Liked songs</span>
+            </a>
+
+            <p class="line"></p>
+            <p>Radio</p>
         </div>
-        <a href="index.html">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
-                <path
-                    d="M 12 2 A 1 1 0 0 0 11.289062 2.296875 L 1.203125 11.097656 A 0.5 0.5 0 0 0 1 11.5 A 0.5 0.5 0 0 0 1.5 12 L 4 12 L 4 20 C 4 20.552 4.448 21 5 21 L 9 21 C 9.552 21 10 20.552 10 20 L 10 14 L 14 14 L 14 20 C 14 20.552 14.448 21 15 21 L 19 21 C 19.552 21 20 20.552 20 20 L 20 12 L 22.5 12 A 0.5 0.5 0 0 0 23 11.5 A 0.5 0.5 0 0 0 22.796875 11.097656 L 12.716797 2.3027344 A 1 1 0 0 0 12.710938 2.296875 A 1 1 0 0 0 12 2 z">
-                </path>
-            </svg>
-            <span>Inicial</span>
-        </a>
-        <a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
-                <path d="M22 20L20 22 14 16 14 14 16 14z"></path>
-                <path
-                    d="M9,16c-3.9,0-7-3.1-7-7c0-3.9,3.1-7,7-7c3.9,0,7,3.1,7,7C16,12.9,12.9,16,9,16z M9,4C6.2,4,4,6.2,4,9c0,2.8,2.2,5,5,5 c2.8,0,5-2.2,5-5C14,6.2,11.8,4,9,4z">
-                </path>
-                <path d="M13.7 12.5H14.7V16H13.7z" transform="rotate(-44.992 14.25 14.25)"></path>
-            </svg>
-            <span>Pesquisa</span>
-        </a>
-        <a href="#">
-            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100" viewBox="0 0 24 24">
-                <path d="M2 11H22V13H2zM2 5H22V7H2zM2 17H22V19H2z">
-                </path>
-            </svg>
-            <span>Biblioteca</span>
-        </a>
-
-        <br />
-        <a href="#" class="logo-menuvertical">
-            <img src="./img/create_a_new.png" />
-            <span>Nova Playlist</span>
-        </a>
-        <a href="#" class="logo-menuvertical">
-            <img src="./img/liked_songs.jpg" />
-            <span>Liked songs</span>
-        </a>
-
-        <p class="line"></p>
-        <p>Radio</p>
-    </div>
     </nav>
     <div class="menu-bar">
         <div class="nav-buttons">
@@ -125,6 +126,7 @@
     <script src="./js/playSongs.js"></script>
     <script src="./js/homeScreen.js"></script>
     <script src="./js/playlistScreen.js"></script>
+    </meta>
 </body>
 
 </html>
